force-app/main/default/objects/TED_Columbia_Screening__c/TED_Columbia_Screening__c.object-meta.xml
<CustomObject>
    <description>Custom Object to capture questions and answers for the Columbia Screening Protocol, used to identify those Veterans who are at most risk.</description>
    <label>Columbia Screening</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Columbia Screening</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Columbia Screenings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>