force-app/main/default/objects/TED_Columbia_Screening__c/fields/Progress_Note__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to Progress Note Object</description>
    <label>Progress Note</label>
    <referenceTo>VCC_Progress_Note__c</referenceTo>
    <relationshipLabel>Columbia Screenings</relationshipLabel>
    <relationshipName>Columbia_Screenings</relationshipName>
    <type>Lookup</type>
</CustomField>