force-app/main/default/objects/TED_Columbia_Screening__c/fields/TED_Answer_5__c.field-meta.xml
<CustomField>
    <fullName>TED_Answer_5__c</fullName>
    <description>Answer 5 for Columbia Screening Question 5</description>
    <inlineHelpText>Answer Yes or No</inlineHelpText>
    <label>Answer 5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>