force-app/main/default/objects/TED_Columbia_Screening__c/fields/TED_Columbia_Screening_Result__c.field-meta.xml
<CustomField>
    <fullName>TED_Columbia_Screening_Result__c</fullName>
    <description>Results for a Columbia Screening Questionnaire performed when a Tele-EC Nurse Progress Note is created.</description>
    <label>Columbia Screening Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Patient Unable to Answer</fullName>
            </value>
            <value>
                <fullName>Patient Declined to Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>