force-app/main/default/objects/TED_Columbia_Screening__c/fields/TED_Question_1__c.field-meta.xml
<CustomField>
    <fullName>TED_Question_1__c</fullName>
    <description>Question 1 Columbia Screening</description>
    <formula>&quot;Over the past month, have you wished you were dead or wished you could go to sleep and not wake up?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 1</label>
    <type>Text</type>
</CustomField>