force-app/main/default/objects/TED_Columbia_Screening__c/fields/TED_Question_2__c.field-meta.xml
<CustomField>
    <fullName>TED_Question_2__c</fullName>
    <description>Question 2 Columbia Screening</description>
    <formula>&quot;Over the past month, have you actually had any thoughts about killing yourself?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 2</label>
    <type>Text</type>
</CustomField>