force-app/main/default/objects/TED_Columbia_Screening__c/fields/TED_Question_3__c.field-meta.xml
<CustomField>
    <fullName>TED_Question_3__c</fullName>
    <description>Question 3 Columbia Screening</description>
    <formula>&quot;Over the past month, have you been thinking about how you might do this?&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question 3</label>
    <type>Text</type>
</CustomField>